# olho-publico

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
apps/etl/: Dockerfile  README.md  pyproject.toml
apps/etl/olho_publico_etl/: __init__.py  __main__.py  _log.py  config.py
apps/etl/olho_publico_etl/alerts/: __init__.py  engine.py
apps/etl/olho_publico_etl/alerts/rules/: __init__.py  base.py  concentracao.py  empresa_foguete.py  (+4 more)
apps/etl/olho_publico_etl/db/: __init__.py  connection.py
apps/etl/olho_publico_etl/jobs/: __init__.py  recompute_agregacoes.py  sync_compliance.py  sync_ibge.py  sync_programas_sociais.py  sync_renuncias.py  sync_transferencias.py
apps/etl/olho_publico_etl/models/: __init__.py  alerta.py  contrato.py  doacao.py  empresa.py  municipio.py  sancao.py
apps/etl/olho_publico_etl/pipeline/: __init__.py  bronze.py  gold.py
apps/etl/olho_publico_etl/sources/: base.py
apps/etl/olho_publico_etl/storage/: __init__.py  r2.py
apps/etl/olho_publico_etl/utils/: __init__.py  cpf_mask.py  slug.py
apps/etl/tests/fixtures/: ibge_municipios_sample.json  transparencia_transferencias.json
apps/etl/tests/unit/: test_aggregations.py  test_alerts.py  test_bronze_writer.py  test_config.py  test_db_connection.py  test_gold_upsert.py  test_ibge_municipios.py  test_models.py  test_r2_client.py  test_rate_limit.py  test_transparencia_client.py  test_transparencia_contratos.py  test_transparencia_convenios.py  test_transparencia_emendas.py  test_transparencia_transferencias.py  test_utils.py
(+103 files in other folders)
